# pretty-papi

./: .gitignore  CMakeLists.txt  README.md  example.cpp  prettypapi.cpp  prettypapi.hpp
benchmark_function/: benchmark_function.cpp  benchmark_function.hpp
include/papi/: config.h  f77papi.h  f90papi.h  fpapi.h  papi_events_table.h
scripts/: disable_turbo_boost_linux.sh  enable_papi_linux.sh
tests/: main_tests.cpp
